refactor(kafka): make config getters return immutable collections without ternaries